//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table otp_users {
  id String [pk]
  email String [unique, not null]
  OTP String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  expiresAt DateTime [default: `now()`, not null]
}

Table users {
  id String [pk]
  firstName String [not null]
  lastName String [not null]
  username String [unique, not null]
  email String [unique, not null]
  password String [not null]
  verified Boolean [not null, default: false]
  profilePicture String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Wallet wallets
  senderFK transfer_histories [not null]
  receiverFK transfer_histories [not null]
  Transaction transactions [not null]
}

Table wallets {
  id String [pk]
  balance Float [not null, default: 0]
  pin String [not null]
  user users [not null]
  userId String [unique, not null]
  cardNumber String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table operator_cards {
  id String [pk]
  name String [unique, not null]
  status StatusEnum [not null]
  thumbnail String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  DataPlan data_plans [not null]
}

Table data_plans {
  id String [pk]
  name String [unique, not null]
  price Float [not null]
  OperatordCard operator_cards [not null]
  operatorCardId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  DataPlanHistories data_plan_histories [not null]
}

Table data_plan_histories {
  id String [pk]
  dataPlan data_plans [not null]
  dataPlanId String [not null]
  transaction transactions [not null]
  transactionId String [not null]
  phoneNumber String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table payment_methods {
  id String [pk]
  name String [not null]
  code String [unique, not null]
  thumbnail String [not null]
  status StatusEnum [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Transaction transactions [not null]
}

Table transaction_types {
  id String [pk]
  name String [not null]
  code String [unique, not null]
  action ActionTransaction [not null]
  thumbnail String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Transaction transactions [not null]
}

Table transactions {
  id String [pk]
  user users [not null]
  userId String [not null]
  transactionType transaction_types [not null]
  transactionTypeId String [not null]
  paymentMethod payment_methods [not null]
  paymentMethodId String [not null]
  productData products
  productId String
  amount Float [not null]
  transactionCode String [unique, not null]
  description String
  status String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  DataPlanHistories data_plan_histories [not null]
}

Table products {
  id String [pk]
  name String [not null]
  thumbnail String [not null]
  price Float [not null]
  status StatusEnum [not null]
  description String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Transaction transactions [not null]
}

Table transfer_histories {
  id String [pk]
  sender users [not null]
  senderId String [not null]
  receiver users [not null]
  receiverId String [not null]
  transactionCode String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table tips {
  id String [pk]
  title String [not null]
  url String [unique, not null]
  thumbnail String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum StatusEnum {
  ACTIVE
  INACTIVE
}

Enum ActionTransaction {
  CR
  DR
}

Ref: wallets.userId - users.id

Ref: data_plans.operatorCardId > operator_cards.id

Ref: data_plan_histories.dataPlanId > data_plans.id

Ref: data_plan_histories.transactionId > transactions.id

Ref: transactions.userId > users.id

Ref: transactions.transactionTypeId > transaction_types.id

Ref: transactions.paymentMethodId > payment_methods.id

Ref: transactions.productId > products.id

Ref: transfer_histories.senderId > users.id

Ref: transfer_histories.receiverId > users.id